# matrix

./: CMakeLists.txt  README.md  _2home_2runner_2work_2matrix_2matrix_2src_2matrix_8h-example.html  annotated.html  classMatrix-members.html  classMatrix.html  classMatrix_a36f7529939fd3f35ebd112a682b1bea5_icgraph.dot  classMatrix_a83a524913f8dc1f7d5aa6c5485c2ec52_cgraph.dot  classMatrix_ac56035e22e959e4b740116b9b7c0df63_cgraph.dot  classMatrix_ad04d7286a9248d4d005a819bbbdc62a8_icgraph.dot  classMatrix_afb1033415124e0cd65a7dc50aae96501_icgraph.dot  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  examples.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.dot  matrix_8h.html  matrix_8h__dep__incl.dot  matrix_8h__incl.dot  matrix_8h_source.html  menudata.js  namespacedetail.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  structMatrix_1_1index__proxy-members.html  structMatrix_1_1index__proxy.html  structMatrix_1_1index__proxy__coll__graph.dot  structMatrix_1_1matrix__iterator-members.html  structMatrix_1_1matrix__iterator.html  (+15 more)
docs/: Doxyfile.in  docs.cmake
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  functions_0.js  (+24 more)
tests/: CMakeLists.txt  test_matrix.cpp
(+4 files in other folders)
